--- a/1_data_to_sql.ipynb
+++ b/1_data_to_sql.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Penguins of Madagascar (Part 1)\n",
-    "<img src=\"images//penguins.jpg\" width=\"400\" height=\"300\">\n",
+    "<img src="images//penguins.jpg" width="400" height="300">\n",
     "\n",
     "\n",
     "## From Dataset to project specific data base\n",
