--- a/1_data_to_sql.ipynb
+++ b/1_data_to_sql.ipynb
@@ -6,6 +6,7 @@
    "source": [
     "# Penguins of Madagascar (Part 1)\n",
      "<img src=\"images//penguins.jpg\" width=\"400\" height=\"300\">\n",
+    "![](images/penguins.jpg)\n"
     "\n",
     "\n",
     "## From Dataset to project specific data base\n",
