--- a/1_data_to_sql.ipynb
+++ b/1_data_to_sql.ipynb
@@ -5,8 +5,8 @@
    "metadata": {},
    "source": [
     "# Penguins of Madagascar (Part 1)\n",
-     "<img src=\"images//penguins.jpg\" width=\"400\" height=\"300\">\n",
-    "![](images/penguins.jpg)\n"
+    "<img src=\"images//penguins.jpg\" width=\"400\" height=\"300\">\n",
+    "![](images/penguins.jpg)",
     "\n",
     "\n",
     "## From Dataset to project specific data base\n",
